
Wavelab (reasonably) has trouble starting up a plugin with latency
while the song is playing -- the output will have clicks. (In fact, in
Wavelab 3.0 you may get no sound at all because of a bug in that host
that's corrected in Wavelab 4.) Simply restart playing in order to fix
this, or add Geometer when the song is not playing.

'span' was suggested by Bram of Smartelectronix.
'friends' was suggested by Jason Reed, sort of.